# rugroulette

./: .editorconfig  .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  README.md  tsconfig.json
app/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  seed-markets.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  bs58.d.ts  idl.json  index.css  main.tsx
app/src/components/: BetPanel.tsx  ClaimPanel.tsx  Countdown.tsx  ErrorBoundary.tsx  MarketCard.tsx  Navbar.tsx  TokenInfo.tsx
app/src/hooks/: RugProgramContext.tsx  useMarkets.ts  useProgram.tsx  useRugProgram.ts
app/src/lib/: constants.ts  format.ts  pda.ts
app/src/pages/: HistoryPage.tsx  LandingPage.tsx  LeaderboardPage.tsx  MarketDetailPage.tsx  MarketsPage.tsx  NotFoundPage.tsx  ProfilePage.tsx
app/src/store/: marketStore.ts
crank/: .env.example  ai_scorer.py  config.py  main.py  market_creator.py  market_resolver.py  requirements.txt  resolver.py  scanner.py  solana_utils.py
docs/: SCORING.md  api.md
programs/rugroulette/: Cargo.toml
programs/rugroulette/src/: constants.rs  errors.rs  lib.rs
programs/rugroulette/src/instructions/: cancel_market.rs  claim_loss.rs  claim_refund.rs  claim_winnings.rs  create_market.rs  initialize_factory.rs  mod.rs  place_bet.rs  resolve_market.rs  update_ai_score.rs  update_factory.rs
programs/rugroulette/src/state/: bet.rs  factory.rs  market.rs  mod.rs  profile.rs
